--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -1,7 +1,24 @@
 ca:
-  who_we_are: EsPerTu, associació es una ONG (organització no governamental), que té la seva seu a la població de Barcelona. Els nostres cooperants han organitzat des de l’any 1998, el viatge y la estada dels nens i nenes ucra
-    nesos afectats per les radiacions derivades de la explosió de la central nuclear de Txernòbil (Ucra
-    na). El nostre projecte consisteix en facilitar al major numero de nens i nenes ucra
-    nesos el poder sortir del seu entorn habitual per que puguin recuperar el màxim les seves defenses naturals. Els nens ucra
-    nesos estaran amb nosaltres un mes a Espanya, que segons criteri mèdic es el temps ideal per recuperar les seves defenses naturals. Aquest període de temps suposa la regeneració de les seves defenses naturals entre set i vuit anys. La associació valora especialment que els nens i nenes ucra
-    nesos que venen a passar les vacances d'Estiu amb nosaltres siguin de la zona mes propera a la central nuclear de Txernòbil.
+  nav:
+    about: Qui som?
+    project: Projecte
+    contact: Contacte
+  presentation: Acollides temporals de nens i nenes ucrainesos afectats per la radiacio a Chernobil
+  about:
+    title: Qui som?
+    p1: La Associacio ES PER TU NENS DE CHERNOBIL es una ONG (Orgnitzacio no gubernamental), amb seu a Barcelona.
+    p2: Esta inscrita al registre d'entitats del Departament de Justicia de la Generalitat de Catalunya amb el registre N 45464.
+    p3: Els nostres cooperants han organitzat des de l'any 1998, al viatje y la estancia dels nens i nenes Ucrainesos afectats per la radiacio derivada de la explosio de la central nuclear de Chernobil (Ucraina).
+  project:
+    title: El nostre projecte.
+    p1: El nostre projecte consisteix en facilitar al major nombre de nens y nenes ucrainesos el poder sortir del seu entorn habitual per tal que puguin recuperar al maxim les seves defences naturals, enfront la exposicio continua a la radiacio residual de l'accident de Chernobil.
+    p2: Els nens ucrainesos estaran amb nosaltre a Espanya, entre un o dos mesos depenent de si es tracta del projecte de nadal o estiu, que segons criteri medic es el temps ideal per recuperar les seves defenses naturals.
+    p3: Aquest periode de temps suposa la regeneracio de les seves defenses naturals entre set i vuit anys.
+    p4: La associacio valora especialment que els nens i nenes ucrainesos que venen a passar les vacances de nadal o estiu amb nosaltres, son de la zona mes propera a la central nuclear de Chernobil.
+    p5: Tots els nens i nenes que venen per primera vegada amb nosaltres son de la poblacio Ivankiv y pobles propers a la central nuclear.
+    p6: Tambe cal recordar que existeixen grans zones del territori d'Ucraina amb alts index de radiactivitat i que aquesta radiactivitat ho contamina tot, des de l'aigua que beuen fins a l'aire que respiren, passant pels aliments que cultiven i que despres consumeixen.
+    p7: Es creu que hauran de passar uns 1000 anys per que les zones ara contaminades tornin a ser totalment netes.
+    p8: Les malalties derivades de l'exposicio continuada i constant a la radiactivitat, incideixen especialment en els nens i son principalment cancers de tiroides, leucemies, transtorns metabolics,endocrins, respiratoris i una llarga llista de malalties derivades de la radiactivitat.
+  contact:
+    title: Contacta amb EsPerTu
+    p1: No dubtis a contactar amb nosaltres per qualsevol tipus de consulta, feedback, sugerencia o senzillament dir hola!
