--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -9,22 +9,22 @@ es:
     about: ¿Quienes somos?
     project: Proyecto
     contact: Contacto
-  presentation: Acogidas temporales de niñ@s ucranianos afectados por la radiación en Chernobil
+  presentation: Acogidas temporales de niños y niñas ucranianos afectados por la radiación en Chernobil
   about:
     title: ¿Quienes somos?
     p1: La Asociación ÉS PER TU NIÑOS DE CHERNOBIL es una ONG (Organización no gubernamental), con sede en Barcelona.
-    p2: Esta inscrita en el registro de entidades del Departamento de Justicia de la Generalitat de Cataluña con el registro Nº45464.
+    p2: Está inscrita en el registro de entidades del Departamento de Justicia de la Generalitat de Catalunya con el registro Nº45464.
     p3: Nuestros cooperantes han organizado desde el año 1998, el viaje y la estancia de los niños y niñas Ucranianos afectados por las radiaciones derivadas de la explosión de la central nuclear de Chernóbil (Ucrania)
   project:
     title: Nuestro proyecto
     p1: Nuestro proyecto consistía en facilitar al mayor número de niños y niñas Ucranianos el poder salir de su entorno habitual para que puedan recuperar el máximo de sus defensas naturales, por la exposición continua a la radiación residual el accidente de Chernobil.
-    p2: Los niños ucranianos estarán con nosotros en España, entre un mes y dos meses dependiendo si es el proyecto de navidad o el de verano, que según criterio médico es el tiempo ideal para recuperar sus defensas naturales.
+    p2: Los niños ucranianos estarán con nosotros en España, entre un mes y dos meses dependiendo de si es el proyecto de navidad o el de verano, que según criterio médico es el tiempo ideal para recuperar sus defensas naturales.
     p3: Este periodo de tiempo supone la regeneración de sus defensas naturales entre siete y ocho años.
-    p4: La asociación valora especialmente que los niños y niñas ucranianos que vienen a pasar las vacaciones de navidad o verano, con nosotros son de la zona más cercana a la central nuclear de Chernóbil.
+    p4: La asociación valora especialmente que los niños y niñas ucranianos que vienen a pasar las vacaciones de navidad o verano con nosotros, son de la zona más cercana a la central nuclear de Chernóbil.
     p5: Todos los niños y niñas que vienen por primera vez con nosotros son de la población Ivankiv y aldeas cercanas a la central Nuclear.
-    p6: También tenemos que recordar que existen grandes zonas del territorio de Ucrania con altos índices de radiactividad Y que esta radiactividad lo contamina todo, desde el agua que beben hasta el aire que respiran, pasando por los alimentos que cultivan y que después consumen.
-    p7: Se cree que tendrá que pasar unos 1.000 años para que las zonas ahora contaminadas vuelvan a ser totalmente limpias.
-    p8: Las enfermedades derivadas de la exposición continuada y constante a la radioactividad, inciden especialmente en los niños y son principalmente cánceres de tiroides, leucemias, trastornos metabólicos, endocrinos, respiratorios y una larga lista de enfermedades derivadas de la radioactividad.
+    p6: También tenemos que recordar que existen grandes zonas del territorio de Ucrania con altos índices de radiactividad y que esta radiactividad lo contamina todo, desde el agua que beben hasta el aire que respiran, pasando por los alimentos que cultivan y que después consumen.
+    p7: Se cree que tendrán que pasar unos 1.000 años para que las zonas ahora contaminadas vuelvan a ser totalmente limpias.
+    p8: Las enfermedades derivadas de la exposición continuada y constante a la radiactividad, inciden especialmente en los niños y son principalmente cánceres de tiroides, leucemias, trastornos metabólicos, endocrinos, respiratorios y una larga lista de enfermedades derivadas de la radiactividad.
   contact:
     title: Contacta con EsPerTu
     send_message: Enviar mensaje
